--- a/src/sass/layout/_telegram-bar.scss
+++ b/src/sass/layout/_telegram-bar.scss
@@ -4,42 +4,77 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  padding: 50px 0;
+
+  @include respond-to('l') {
+    padding: 30px 0;
+  }
+
+  @include respond-to('xl') {
+    padding: 50px 0;
+  }
 
   .telegram-container__title {
-    margin-left: calc((100% - 1140px) / 2);
     color: map_get($colors, txt-white);
     font-weight: 800;
     font-size: 32px;
     text-transform: uppercase;
     width: 33%;
     line-height: 45px;
+    @include respond-to('l') {
+      font-size: 28px;
+      width: 500px;
+      margin-left: calc((100% - 960px) / 2);
+    }
 
+    @include respond-to('xl') {
+      font-size: 32px;
+      width: 500px;
+      margin-left: calc((100% - 1140px) / 2);
+    }
   }
 
   .telegram-button {
-    margin-right: calc((100% - 1140px) / 2);
+
+    @include respond-to('l') {
+      margin-right: calc((100% - 960px) / 2);
+    }
+
+    @include respond-to('xl') {
+      margin-right: calc((100% - 1140px) / 2);
+    }
     .telegram-button__link {
       color: map_get($colors, txt-white);
       font-size: 22px;
       font-weight: 700;
       line-height: 22px;
       text-transform: uppercase;
-      padding: 20px 100px 20px 135px;
       background-color: map_get($colors, bg-red);
       position: relative;
-      &:before{
+      @include respond-to('l') {
+        padding: 20px 55px 20px 90px;
+      }
+
+      @include respond-to('xl') {
+        padding: 20px 100px 20px 135px;
+      }
+      &:before {
         content: '';
         display: inline-block;
         position: absolute;
         top: 50%;
         left: 25%;
-        transform: translate(0, -50%);
+
         height: 26px;
         width: 28px;
         background-image: url(../../../images/paper-plane.svg);
         z-index: 2;
         @include bg-img;
+        @include respond-to('l') {
+          transform: translate(-85%, -50%);
+        }
+        @include respond-to('xl') {
+          transform: translate(0, -50%);
+        }
       }
     }
   }
