--- a/src/sass/layout/_head-page.scss
+++ b/src/sass/layout/_head-page.scss
@@ -30,21 +30,19 @@
   justify-content: space-between;
   margin: 0;
   padding: 0;
+  height: 68px;
 }
 
-.nav-bar__item {
-  padding: 0 0 50px 0;
-  height: 74px;
-  transition: border-bottom .3s ease-in-out;
-  border-bottom: 0px solid map_get($colors, border-red);
-  &:hover {
-    border-bottom: 7px solid map_get($colors, border-red);
-    transition: border-bottom .3s ease-in-out;
+.nav-bar__item{
+max-height: 24px;
+  &:hover>.nav-btn__link:after{
+    opacity: 1;
+    transform: translateY(62px);
   }
 }
 
-.nav-bar__item--last:hover{
-  border-bottom: none;
+.nav-btn .nav-btn__link--red:after{
+  display: none;
 }
 
 .nav-btn__link {
@@ -53,8 +51,27 @@
   text-transform: uppercase;
   letter-spacing: 0.4px;
   color: map_get($colors, txt-dark);
-  padding: 0 0 50px 0;
-}
+  position: relative;
+  &:after{
+    content: '';
+    display: block;
+    position: absolute;
+    height: 7px;
+    width: 100%;
+    top: 0;
+    left: 0;
+    transform: translateY(69px);
+    transition: transform .5s ease-in-out, opacity .5s ease-in-out;
+    opacity: 0;
+    background-color: map_get($colors, border-red);
+    pointer-events: none;
+  }
+  &:hover:after{
+    pointer-events: none;
+  }
+  }
+
+
 
 .nav-btn__link--red {
   border: 3px solid map_get($colors, border-red);
