--- a/src/sass/layout/_telegram-bar.scss
+++ b/src/sass/layout/_telegram-bar.scss
@@ -8,7 +8,7 @@
   align-items: center;
   font-size: 32px;
   line-height: 45px;
-  padding: 50px 0;
+  padding: 44.5px 0 44.5px;
 
   .telegram-container__title {
     color: map_get($colors, txt-white);
