--- a/src/sass/_vars.scss
+++ b/src/sass/_vars.scss
@@ -7,7 +7,8 @@ $colors: (
         bg-red: #e40037,
         arrow-bg: #f5f5f5,
         border-media: #777,
-        bg-dark: #2b2b2b
+        bg-dark: #2b2b2b,
+        border-gray: #c4c4c4
 );
 
 $min-breakpoints: (
