--- a/src/sass/layout/_head-page.scss
+++ b/src/sass/layout/_head-page.scss
@@ -9,16 +9,34 @@
   text-align: center;
   .logo__link {
     font-size: 46px;
+    line-height: 46px;
     color: map_get($colors, txt-dark);
-    margin: 50px 0;
+    margin: 55px 0 51px;
     display: inline-block;
     text-transform: uppercase;
+    @include max(1919px){
+      font-size: 36px;
+      line-height: 36px;
+      margin: 30px 0 40px;
+    }
+    @include max(1365px){
+      font-size: 36px;
+      line-height: 36px;
+      margin: 30px 0 40px;
+    }
+    @include max(1279px){
+      font-size: 36px;
+      line-height: 36px;
+      margin: 30px 0 40px;
+    }
   }
 }
 
 .nav-container {
-  margin: 0 auto;
-  width: 1140px;
+  @include margin-xl;
+  @include max(1919px){
+    @include margin-l;
+  }
 }
 
 .nav-bar {
@@ -58,7 +76,7 @@
     top: 0;
     left: 0;
     transform: translateY(69px);
-    transition: transform .5s ease-in-out, opacity .5s ease-in-out;
+    transition: transform .3s ease-in-out, opacity .5s ease-in-out;
     opacity: 0;
     background-color: map_get($colors, border-red);
     pointer-events: none;
