--- a/src/sass/layout/_telegram-bar.scss
+++ b/src/sass/layout/_telegram-bar.scss
@@ -1,7 +1,10 @@
+.call-to-action {
+  background-color: map_get($colors, bg-dark);
+}
+
 .telegram-container {
   font-family: "Raleway", sans-serif;
   font-weight: 800;
-  background-color: map_get($colors, bg-dark);
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -9,45 +12,52 @@
   font-size: 32px;
   line-height: 45px;
   padding: 44.5px 0 44.5px;
-
+  @include margin-xl;
+  @include max(1919px){
+    @include margin-l;
+  }
   .telegram-container__title {
     color: map_get($colors, txt-white);
     font-weight: 800;
     font-size: 32px;
     text-transform: uppercase;
-    width: 33%;
     line-height: 45px;
     width: 500px;
-    margin-left: calc((100% - 1140px) / 2);
+    @include max(1919px){
+      font-size: 30px;
+      line-height: 30px;
+    }
   }
 
-  .telegram-button {
-    margin-right: calc((100% - 1140px) / 2);
-
-    .telegram-button__link {
-      color: map_get($colors, txt-white);
-      font-family: 'Raleway', sans-serif;
-      font-size: 22px;
-      font-weight: 700;
-      line-height: 22px;
-      text-transform: uppercase;
-      background-color: map_get($colors, bg-red);
-      position: relative;
-      padding: 20px 100px 20px 135px;
-
-      &:before {
-        content: '';
-        display: inline-block;
-        position: absolute;
-        top: 50%;
-        left: 25%;
-        height: 26px;
-        width: 28px;
-        background-image: url(../../images/paper-plane.svg);
-        z-index: 2;
-        @include bg-img;
-        transform: translate(0, -50%);
+  .telegram-button__link {
+    color: map_get($colors, txt-white);
+    font-family: 'Raleway', sans-serif;
+    font-size: 22px;
+    font-weight: 700;
+    line-height: 22px;
+    text-transform: uppercase;
+    background-color: map_get($colors, bg-red);
+    position: relative;
+    padding: 14.5px 100px 14.5px 131px;
+    @include max(1919px){
+      padding: 14.5px 75px 14.5px 100px;
+    }
+    &:before {
+      content: '';
+      display: inline-block;
+      position: absolute;
+      top: 50%;
+      left: 25%;
+      height: 26px;
+      width: 28px;
+      background-image: url(../../images/paper-plane.svg);
+      z-index: 2;
+      @include bg-img;
+      transform: translate(0, -50%);
+      @include max(1919px){
+        transform: translate(-50%, -50%);
       }
     }
   }
+
 }
