--- a/src/sass/_grid.scss
+++ b/src/sass/_grid.scss
@@ -2,6 +2,22 @@
   width: 31%
 }
 
+.col-33-2{
+  width: 33.2%;
+}
+
+.col-66{
+  width: 66%;
+}
+
+.col-49-4{
+  width: 49.4%;
+}
+
+.row-49{
+  height: 49%;
+}
+
 .col-md-45 {
   @media (max-width: 1365px) {
     width: 45%
