--- a/src/sass/layout/_telegram-bar.scss
+++ b/src/sass/layout/_telegram-bar.scss
@@ -54,17 +54,13 @@
       padding: 14.5px 75px 14.5px 100px;
 
     }
-    &:before {
-      content: '';
+    .telegram-logo {
       display: inline-block;
       position: absolute;
       top: 50%;
       left: 25%;
       height: 26px;
       width: 28px;
-      background-image: url(../../images/paper-plane.svg);
-      z-index: 2;
-      @include bg-img;
       transform: translate(0, -50%);
       @include max(1919px) {
         transform: translate(-50%, -50%);
@@ -72,4 +68,6 @@
     }
   }
 }
+
+
 
