--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -11,7 +11,7 @@
 @import "layout/telegram-bar";
 @import "layout/utilities";
 @import "layout/how-it-works";
-
+@import "layout/acordeon";
 
 a{
   @include noselect;
