--- a/src/sass/_vars.scss
+++ b/src/sass/_vars.scss
@@ -8,7 +8,8 @@ $colors: (
         arrow-bg: #f5f5f5,
         border-media: #777,
         bg-dark: #2b2b2b,
-        border-gray: #c4c4c4
+        border-gray: #c4c4c4,
+        bg-litegray: #3e3e3e
 );
 
 $min-breakpoints: (
