--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -25,7 +25,6 @@
 .inner {
   width: 278px;
   height: 55px;
-  background-color: map_get($colors, bg-dark);
   position: relative;
   font-family: "Raleway", sans-serif;
 }
@@ -34,32 +33,28 @@
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
-  @include bg-img;
+  z-index: 1;
 }
 
 .logo-facebook {
-  background-image: url(../../images/facebook.svg);
   width: 30px;
   height: 30px;
   left: 19px;
 }
 
 .logo-viber {
-  background-image: url(../../images/viber-logo.svg);
   width: 31px;
   height: 31px;
   left: 21px;
 }
 
 .logo-telegram {
-  background-image: url(../../images/telegram-logo.svg);
   width: 28px;
   height: 28px;
   left: 19px;
 }
 
 .logo-whatsapp {
-  background-image: url(../../images/whatsapp.svg);
   width: 29px;
   height: 29px;
   left: 22px;
@@ -68,18 +63,21 @@
 .social-btn {
   transition: background-color .3s ease-in-out, border-color .3s ease-in-out, color .3s ease-in-out;
   width: 100%;
-  display: block;
+  display: inline-block;
   height: 100%;
   text-transform: uppercase;
   text-align: center;
   font-family: "Raleway", sans-serif;
   font-weight: 700;
+  position: relative;
 }
 
 .social-btn--dark {
   color: map_get($colors, txt-white);
   font-size: 18px;
-  line-height: 55px;
+  border: 2px solid #2b2b2b;
+  line-height: 51px;
+  background-color: map_get($colors, bg-dark);
 }
 
 .subs-wrapper {
@@ -102,6 +100,7 @@
   min-width: 387px;
 }
 
+/*Subs-container*/
 .subs-container {
   display: flex;
   flex-direction: row;
@@ -113,7 +112,7 @@
 
 .subs-container__item {
   width: 32.4%;
-  background-color: #ffffff;
+  background-color: transparent;
 }
 
 .social-btn--narrow--white {
@@ -149,6 +148,7 @@
   left: 17px;
 }
 
+/* docs-container */
 .docs-container {
   display: flex;
   flex-direction: row;
@@ -171,9 +171,9 @@
   height: 55px;
 }
 
+/*COPYRIGHT*/
 .copyright {
   padding: 76px 0 29px;
-
   text-align: right;
   color: #333333;
   font-family: "Raleway", sans-serif;
@@ -204,25 +204,21 @@
   }
 }
 
-.subs-logo,.socials-logo{
-  z-index: 3;
-  cursor: pointer;
+/*hover effect for svg*/
+path, circle {
+  transition: fill .3s ease;
 }
 
-.subs-logo:hover ~ .social-btn,
-.socials-logo:hover ~ .social-btn{
-  background-color: map_get($colors, bg-red);
-  border-color: map_get($colors, bg-red);
-  color: map_get($colors, txt-white);
+.subs-logo:hover *, .subs-container__item:hover > .subs-logo * {
+  fill: #fff;
 }
 
-.subs-logo:hover{
-  fill:#fff;
+//.socials-logo:hover *, .socials__item:hover > .socials-logo * {
+//  fill: #000;
+//}
+
+.social-btn--dark:hover > .socials-logo *{
+  fill: #000;
 }
 
-.social-btn:hover{
-  background-color: map_get($colors, bg-red);
-  border-color: map_get($colors, bg-red);
-  color: map_get($colors, txt-white);
-}
 
