--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -14,6 +14,7 @@
 @import "layout/dropdown";
 @import "layout/question-block";
 @import "layout/footer";
+@import "layout/button-hover";
 
 a{
   @include noselect;
