--- a/src/sass/_grid.scss
+++ b/src/sass/_grid.scss
@@ -1,6 +1,6 @@
-.col-24{
-  width: 24%;
-}
+//.col-24{
+//  width: 24%;
+//}
 
 .col-31 {
   width: 31%
@@ -21,15 +21,15 @@
 .row-49{
   height: 49%;
 }
-
-.col-md-45 {
-  @media (max-width: 1365px) {
-    width: 45%
-  }
-}
-
-.col-sm-100 {
-  @media (max-width: 767px) {
-    width: 100%
-  }
-}
+//
+//.col-md-45 {
+//  @media (max-width: 1365px) {
+//    width: 45%
+//  }
+//}
+//
+//.col-sm-100 {
+//  @media (max-width: 767px) {
+//    width: 100%
+//  }
+//}
