--- a/src/sass/layout/_slider.scss
+++ b/src/sass/layout/_slider.scss
@@ -1,10 +1,11 @@
+.slider {
+  background-color: map_get($colors, txt-white);
+  width: 100%;
+}
+
 .slider-container {
   position: relative;
   height: 809px;
-  @include max(1919px){
-    height: calc(100vh - 184px);
-    min-height: 550px;
-  }
 
   &:before {
     content: "";
@@ -56,9 +57,6 @@
   font-size: 52px;
   font-family: "Raleway", sans-serif;
   font-weight: 800;
-  @include max(1919px){
-    font-size: 46px;
-  }
 }
 
 .title-wrapper {
@@ -70,10 +68,6 @@
   flex-direction: column;
   @include margin-xl;
   align-items: flex-start;
-  @include max(1919px){
-    @include margin-l;
-    top: 80px;
-  }
 }
 
 .slide-title__item {
@@ -85,9 +79,6 @@
   background-color: map_get($colors, bg-gray);
   margin-bottom: 1px;
   padding: 10px 18px 9px 23px;
-  @include max(1919px){
-    line-height: 46px;
-  }
 }
 
 .title-wrapper__subtitle {
@@ -105,9 +96,4 @@
   align-self: flex-start;
   margin-right: 0;
   text-transform: uppercase;
-  @include max(1919px){
-    font-size: 30px;
-    line-height: 30px;
-    padding: 10px 10px 10px 23px;
-  }
 }
