--- a/src/sass/layout/_how-it-works.scss
+++ b/src/sass/layout/_how-it-works.scss
@@ -15,6 +15,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  width: 30%;
   .video-container__play-button {
     width: 107px;
     height: 107px;
@@ -26,14 +27,17 @@
 .desc-container {
   display: flex;
   flex-wrap: wrap;
-  flex-direction: row;
+  flex-direction: column;
   align-content: space-between;
   justify-content: space-between;
+  width: 34%;
 }
 
 .desc-container__item {
   background-color: map_get($colors, bg-dark);
   position: relative;
+  width: 100%;
+  height: 49%;
 }
 
 .desc__text {
