--- a/src/sass/layout/_nav.scss
+++ b/src/sass/layout/_nav.scss
@@ -1,42 +1,26 @@
-.head-page {
-  background-color: map_get($colors, txt-white);
-  width: 100%;
+.head-wrapper{
+  display: flex;
+  flex-direction: column;
+
 }
 
 .logo {
   margin: 0 auto;
   font-family: 'Nanum Gothic', sans-serif;
   text-align: center;
-  .logo__link {
-    font-size: 46px;
-    line-height: 46px;
-    color: map_get($colors, txt-dark);
-    margin: 55px 0 51px;
-    display: inline-block;
-    text-transform: uppercase;
-    @include max(1919px) {
-      font-size: 36px;
-      line-height: 36px;
-      margin: 30px 0 40px;
-    }
-    @include max(1365px) {
-      font-size: 36px;
-      line-height: 36px;
-      margin: 30px 0 40px;
-    }
-    @include max(1279px) {
-      font-size: 36px;
-      line-height: 36px;
-      margin: 30px 0 40px;
-    }
-  }
+}
+
+.logo__link {
+  font-size: 46px;
+  line-height: 46px;
+  color: map_get($colors, txt-dark);
+  margin: 55px 0 51px;
+  display: inline-block;
+  text-transform: uppercase;
 }
 
 .nav-container {
   @include margin-xl;
-  @include max(1919px) {
-    @include margin-l;
-  }
 }
 
 .nav-bar {
