--- a/src/sass/layout/_question-block.scss
+++ b/src/sass/layout/_question-block.scss
@@ -38,12 +38,13 @@
 }
 
 .form{
+  width: 40%;
   display: flex;
   flex-direction: column;
   @include placeholder;
   .form__item{
     height: 61px;
-    width: 434px;
+    width: 100%;
     margin-bottom: 20px;
     background: none;
     outline: none;
