--- a/src/sass/layout/_utilities.scss
+++ b/src/sass/layout/_utilities.scss
@@ -1,5 +1,6 @@
 .wrapper {
   background-color: map_get($colors, txt-white);
+  @include margin-xl;
 }
 
 .title-wrap {
@@ -21,7 +22,7 @@
 }
 
 .title {
-  @include margin-xl;
+
   color: map_get($colors, bg-dark);
   font-family: Raleway, sans-serif;
   font-weight: 800;
@@ -44,7 +45,6 @@
 }
 
 .container {
-  @include margin-xl;
   padding: 86px 0 123px;
   display: flex;
   flex-wrap: wrap;
@@ -57,6 +57,7 @@
   will-change: transform;
   transition: transform .3s ease-in-out;
   padding: 15px 0;
+  width: 31%;
   &:hover {
     transform: scale(1.1, 1.1);
   }
@@ -83,8 +84,9 @@
   border-right: 1px solid map_get($colors, border-gray);
   border-bottom: 1px solid map_get($colors, border-gray);
   border-left: 1px solid map_get($colors, border-gray);
-  height: 159px;
   position: relative;
+  height: 143px;
+  overflow: hidden;
   &:before {
     content: '';
     display: block;
